--- a/examples/test/tdce/turnt.toml
+++ b/examples/test/tdce/turnt.toml
@@ -1,1 +1,1 @@
-command = "bril2json < {filename} | python3 ../../tdce.py {args} | bril2txt"
+command = "bril2json < {filename} | python3 ../../../local_analysis/tdce.py | bril2txt"
