--- a/examples/test/lvn/turnt.toml
+++ b/examples/test/lvn/turnt.toml
@@ -1,1 +1,1 @@
-command = "bril2json < {filename} | python3 ../../lvn.py {args} | bril2txt"
+command = "bril2json < {filename} | python3 ../../../local_analysis/lvn.py | bril2txt"
